# django-postgres-tracked-model

./: .flake8  README.md  pyproject.toml
demo/: models.py  settings.py  urls.py  views.py
demo/migrations/: 0001_initial.py  0002_add_tracking.py  0003_backfill_version_info.py
tests/: conftest.py  test_get_changes.py  test_migrations.py  test_tracking.py  types.py  utils.py
tracked_model/: __init__.py  cursor.py  expressions.py  models.py  utils.py
tracked_model/migrations/: 0001_initial.py
tracked_model/operations/: __init__.py  backfill.py  helpers.py  tiggers.py
