[tool.poetry]
name = "django-postgresql-tracked-model"
version = "0.0.1-alpha0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2"
django = ">=5.0"

[tool.poetry.group.lsp.dependencies]
python-lsp-server = "^1.8.2"
pylsp-mypy = "^0.6.7"
pyls-isort = "^0.2.2"
python-lsp-black = "^2.0.0"


[tool.poetry.group.lint.dependencies]
mypy = "^1.6.1"
isort = "^5.12.0"
black = "^24.2.0"
flake8 = "^7.0.0"
django-stubs = "^4.2.6"
flake8-bugbear = "^24.2.6"


[tool.poetry.group.dev.dependencies]
ipython = "^8.22.2"
psycopg2 = "^2.9.9"
ipdb = "^0.13.13"


[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"
pytest-django = "^4.8.0"
psycopg2 = "^2.9.9"

[tool.isort]
profile = "black"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
strict = true

[tool.django-stubs]
django_settings_module = "demo.settings"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "demo.settings"
